services/am.kite.com/deployment/k8s/resources.yaml
#@ load("@ytt:data", "data")
kind: Namespace
apiVersion: v1
metadata:
  name: #@ data.values.namespace
  labels:
    name: #@ data.values.namespace
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: #@ data.values.namespace
  annotations:
    kubernetes.io/ingress.global-static-ip-name: #@ "am-kite-com-{}".format(data.values.env)
    networking.gke.io/managed-certificates: am-kite-com
spec:
  rules:
  - host: #@ data.values.hostname
    http:
      paths:
      - path: /*
        backend:
          serviceName: user-mux
          servicePort: #@ data.values.user_mux_port
---
apiVersion: v1
kind: Service
metadata:
  name: user-mux
  namespace: #@ data.values.namespace
  annotations:
    cloud.google.com/backend-config: '{"default": "user-mux-hc-config"}'
spec:
  ports:
  - name: target
    protocol: TCP
    port: #@ data.values.user_mux_port
    targetPort: #@ data.values.user_mux_port
  - name: debug
    protocol: TCP
    port: #@ data.values.user_mux_debug_port
    targetPort: #@ data.values.user_mux_debug_port
  selector:
    app: user-mux
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-mux
  namespace: #@ data.values.namespace
  labels:
    tag: #@ data.values.tag
spec:
  selector:
    matchLabels:
      app: user-mux
  template:
    metadata:
      labels:
        app: user-mux
        tag: #@ data.values.tag
    spec:
      serviceAccountName: service
      containers:
        - name: user-mux
          image: #@ "gcr.io/kite-dev-XXXXXXX/am-kite-com-user-mux:{}".format(data.values.tag)
          resources:
            limits:
              memory: #@ data.values.user_mux_mem
              cpu: #@ data.values.user_mux_cpu
          livenessProbe:
            httpGet:
              path: /ping
              port: #@ data.values.user_mux_port
            initialDelaySeconds: 300
          readinessProbe:
            httpGet:
              path: /ping
              port: #@ data.values.user_mux_port
            initialDelaySeconds: 300
          ports:
            - containerPort: #@ data.values.user_mux_port
---
apiVersion: v1
kind: Service
metadata:
  name: user-node
  namespace: #@ data.values.namespace
spec:
  ports:
  - name: target
    protocol: TCP
    port: #@ data.values.user_node_port
    targetPort: #@ data.values.user_node_port
  - name: debug
    protocol: TCP
    port: #@ data.values.user_node_debug_port
    targetPort: #@ data.values.user_node_debug_port
  selector:
    app: user-node
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-node
  namespace: #@ data.values.namespace
  labels:
    tag: #@ data.values.tag
spec:
  selector:
    matchLabels:
      app: user-node
  template:
    metadata:
      labels:
        app: user-node
        tag: #@ data.values.tag
    spec:
      serviceAccountName: service
      containers:
        - name: user-node
          image: #@ "gcr.io/kite-dev-XXXXXXX/am-kite-com-user-node:{}".format(data.values.tag)
          resources:
            limits:
              memory: #@ data.values.user_node_mem
              cpu: #@ data.values.user_node_cpu
          ports:
            - containerPort: #@ data.values.user_node_port
---
